--- a/Styles.css
+++ b/Styles.css
@@ -694,11 +694,7 @@ nav .fa-solid {
   .col {
     display: flex;
     flex-direction: column;
-  }
-
-  .contact-left,
-  .contact-right {
-    flex-basis: 100%;
+    justify-content: space-around;
   }
 
   .contact-left {
@@ -728,14 +724,10 @@ nav .fa-solid {
     margin-top: 10px;
   }
 
-  .form {
-    width: 100vw;
-  }
-
   .form input {
     padding: 10px;
     margin: 10px 15px;
-    width: 190px;
+    width: 300px;
     height: 30px;
     font-size: 10px;
     border-radius: 5px;
@@ -743,7 +735,7 @@ nav .fa-solid {
   .form textarea {
     padding: 10px;
     margin: 10px 15px;
-    width: 190px;
+    width: 300px;
     height: 100px;
     border-radius: 5px;
     font-size: 10px;
@@ -754,5 +746,6 @@ nav .fa-solid {
   .btn2 {
     font-size: 15px;
     margin-top: 10px;
+    margin-left: 15px;
   }
 }
